# tarefa_serializers

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
orders/: factories.py  urls.py
orders/serializers/: order_serializer.py
orders/tests/test_serializers/: test_order_serializer.py
orders/tests/test_viewsets/: test_order_viewset.py
orders/viewsets/: order_viewset.py
product/: models.py
product/migrations/: 0001_initial.py
product/serializers/: product_serializer.py
product/tests/: test_api.py  test_models.py  test_product_viewset.py
product/views/: __init__.py  product_views.py
product/viewsets/: ProductViewSet.py
